fix subnav spacing
The subnav needs room for the triangles of the active and hover
states. This room is not part of the layout and therefore put
into the component partial and applied as padding-right of the
parent container

--- a/src/scss/components/subnav/_config.scss
+++ b/src/scss/components/subnav/_config.scss
@@ -4,8 +4,9 @@ $subnav-font-weight-active: bold !default;
 $subnav-color-border: $color-lines !default;
 $subnav-color-background-hover: $color-background !default;
 
-$subnav-link-padding: rem-calc(24 12) !default;
+$subnav-link-padding: rem-calc(0 12) !default;
 
 $subnav-triangle-height: rem-calc(18) !default; // in essence defines how sharp the triangle is
 
 $subnav-list-item-height: rem-calc(72) !default; // sets the li height and with this also one side of the triangle
+$subnav-list-item-margin: $subnav-list-item-height / 2 !default;
